--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,9 @@ ul.posts {
 }
 
 iframe {
-    style="border-style: none;width: 100%; height: 120px;"
+    border-style: none;
+    width: 100%; 
+    height: 120px;
 }
 
 ul.posts li {
