--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ ul.posts {
 iframe {
     border-style: none;
     width: 100%; 
-    height: 600%;
+    height: 100% !important;
 }
 
 ul.posts li {
