--- a/css/main.css
+++ b/css/main.css
@@ -38,11 +38,11 @@ ul.posts {
     font-size: 1.5em;
 }
 
-iframe {
+/* iframe {
     border-style: none;
     width: 100%; 
     height: 100% !important;
-}
+} */
 
 ul.posts li {
     list-style: none;
