--- a/css/main.css
+++ b/css/main.css
@@ -3,12 +3,20 @@ body {
     width: 70%;
 }
 
-body iframe {
-    border-style: none;
-    width: 100%; 
-    height: 100% !important;
-}
-
+.iframe-container {
+    overflow: hidden;
+    padding-top: 56.25%;
+    position: relative;
+  }
+   
+  .iframe-container iframe {
+     border: 0;
+     height: 100%;
+     left: 0;
+     position: absolute;
+     top: 0;
+     width: 100%;
+  }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
