--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 		</head>
-		<body>
+		<body class="Site">
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
@@ -16,7 +16,9 @@
 			</nav>
 			<div class="container">
 			
+			<main class="Site-content">
 			{{ content }}
+			</main>
 			
 			</div><!-- /.container -->
 			<footer>
