--- a/css/main.css
+++ b/css/main.css
@@ -56,3 +56,13 @@ ul.posts {
 ul.posts li {
     list-style: none;
 }
+
+.Site {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+  }
+  
+  .Site-content {
+    flex: 1;
+  }
