--- a/css/main.css
+++ b/css/main.css
@@ -57,9 +57,8 @@ ul.posts li {
     list-style: none;
 }
 
-profilepic {
-  max-width: 220px;
-  max-height: 150px;
+profilepic > img {
+  max-width: 300px;
 }
 
 .Site {
